feat(search): add more filters
